Create basic grid for review page

--- a/restaurant.html
+++ b/restaurant.html
@@ -12,7 +12,7 @@
   <title>Restaurant Info</title>
 </head>
 
-<body class="inside">
+<body class="inside restaurant-reviews">
   <!-- Beginning header -->
   <header>
     <!-- Beginning nav -->
