Mobile version for front page

--- a/restaurant.html
+++ b/restaurant.html
@@ -12,7 +12,7 @@
   <title>Restaurant Info</title>
 </head>
 
-<body class="inside restaurant-reviews">
+<body class="inside">
   <!-- Beginning header -->
   <header>
     <!-- Beginning nav -->
@@ -33,7 +33,7 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent">
+  <main id="maincontent restaurant-reviews-main">
     <!-- Beginning map -->
     <section id="map-container">
       <div id="map"></div>
