--- a/restaurant.html
+++ b/restaurant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,6 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
-  <link rel="stylesheet" href="css/stylesGrid.css" type="text/css">
   <link rel="stylesheet" href="css/media.css" type="text/css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
     crossorigin="" />
@@ -20,13 +19,13 @@
   <!-- Beginning header -->
   <header>
     <!-- Beginning nav -->
-    <nav>
-      <h1>
+    <nav role="navigation">
+      <h1 role="banner">
         <a href="/">Restaurant Reviews</a>
       </h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb">
+    <ul id="breadcrumb" aria-label="Breadcrumb">
       <li>
         <a href="/">Home</a>
       </li>
@@ -37,23 +36,23 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent restaurant-reviews-main">
+  <main id="maincontent restaurant-reviews-main" role="main">
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" aria-label="Map which displays locations of restaurants" role="application" tabindex="-1"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
-      <img id="restaurant-img">
-      <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
+      <h1 role="heading" aria-label="Name of the restaurant" id="restaurant-name" tabindex="0"></h1>
+      <img id="restaurant-img" aria-label="Image of the restaurant">
+      <p id="restaurant-cuisine" aria-label="Cuisine of the restaurant"></p>
+      <p id="restaurant-address" aria-label="Address of the restaurant"></p>
+      <table id="restaurant-hours" aria-label="Opening hours of the restaurant"></table>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
-    <section id="reviews-container">
+    <section id="reviews-container" aria-label="Restaurant reviews list from the customers">
       <ul id="reviews-list"></ul>
     </section>
     <!-- End reviews -->
@@ -61,7 +60,7 @@
   <!-- End main -->
 
   <!-- Beginning footer -->
-  <footer id="footer">
+  <footer id="footer" role="contentinfo">
     Copyright (c) 2017
     <a href="/">
       <strong>Restaurant Reviews</strong>
