--- a/restaurant.html
+++ b/restaurant.html
@@ -38,8 +38,8 @@
   <!-- Beginning main -->
   <main id="maincontent restaurant-reviews-main" role="main">
     <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map" aria-label="Map which displays locations of restaurants" role="application" tabindex="-1"></div>
+    <section id="map-container" tabindex="-1">
+      <div id="map" aria-label="Map which displays locations of restaurants" role="application"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
@@ -53,7 +53,7 @@
     <!-- end restaurant -->
     <!-- Beginning reviews -->
     <section id="reviews-container" aria-label="Restaurant reviews list from the customers">
-      <ul id="reviews-list"></ul>
+      <ul id="reviews-list"  tabindex="0"></ul>
     </section>
     <!-- End reviews -->
   </main>
