--- a/index.html
+++ b/index.html
@@ -24,21 +24,22 @@
 
   <main id="maincontent" role="main">
     <section id="map-container">
-      <div id="map" aria-label="Map which displays locations of restaurants"></div>
+      <div id="map" aria-label="location" role="application"></div>
     </section>
     <section class="option-section">
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" role="menu" tabindex="0"  aria-label="Select the restaurant by the location">
+        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" role="listbox" tabindex="0"  aria-label="Select the restaurant by the location">
           <option value="all" role="option" tabindex="-1">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" role="menu" tabindex="0"  aria-label="Select the restaurant by it's cuisine">
+        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" role="listbox" tabindex="0"  aria-label="Select the restaurant by it's cuisine">
           <option value="all" role="option" tabindex="-1">All Cuisines</option>
         </select>
       </div>
       <ul id="restaurants-list" role="list"></ul>
     </section>
   </main>
+  
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
     crossorigin=""></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
