--- a/restaurant.html
+++ b/restaurant.html
@@ -25,11 +25,13 @@
       </h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" aria-label="Breadcrumb">
-      <li>
-        <a href="/">Home</a>
-      </li>
-    </ul>
+    <nav aria-label="Breadcrumb">
+      <ul id="breadcrumb" role="navigation">
+        <li>
+          <a href="/">Home</a>
+        </li>
+      </ul>
+    </nav>
     <!-- End breadcrumb -->
     <!-- End nav -->
   </header>
@@ -39,12 +41,12 @@
   <main id="maincontent restaurant-reviews-main" role="main">
     <!-- Beginning map -->
     <section id="map-container" tabindex="-1">
-      <div id="map" aria-label="Map which displays locations of restaurants" role="application"></div>
+      <div id="map" aria-label="location" role="application"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 role="heading" aria-label="Name of the restaurant" id="restaurant-name" tabindex="0"></h1>
+      <h2 role="heading" aria-label="Name of the restaurant" id="restaurant-name" tabindex="0"></h2>
       <img id="restaurant-img" aria-label="Image of the restaurant">
       <p id="restaurant-cuisine" aria-label="Cuisine of the restaurant"></p>
       <p id="restaurant-address" aria-label="Address of the restaurant"></p>
