Fix nav in restaurant page

--- a/restaurant.html
+++ b/restaurant.html
@@ -19,7 +19,7 @@
   <!-- Beginning header -->
   <header>
     <!-- Beginning nav -->
-    <nav role="navigation">
+    <nav class="banner" role="navigation">
       <h1 role="banner">
         <a href="/">Restaurant Reviews</a>
       </h1>
